# haskell-shopify

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.nix  cabal.nix  cabal.sandbox.config  default.nix  fig.yml  shell.nix  shopify.cabal
src/: Api.hs  Shopify.hs  example.hs
src/Network/API/: Shopify.hs
src/Network/API/Shopify/: Client.hs  Request.hs  Types.hs
src/Network/API/Shopify/Types/: APICredential.hs  Image.hs  InventoryPolicy.hs  Metafield.hs  MetafieldType.hs  OAuthToken.hs  Option.hs  Product.hs  ShopifyError.hs  StoreName.hs  Variant.hs
src/Shopify/: Client.hs  Types.hs
src/Shopify/Types/: Image.hs  InventoryPolicy.hs  Metafield.hs  MetafieldType.hs  Option.hs  Product.hs  Variant.hs
test/: Main.hs
test/Data/: Customer.hs  Metafield.hs  Product.hs
