name:                shopify
version:             0.0.0.1
homepage:
license:             AllRightsReserved
license-file:        LICENSE
author:              Aaron Levin
maintainer:          aaron@weirdcanada.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
        Network.API.Shopify
        Network.API.Shopify.Types
        Network.API.Shopify.Client

  build-depends:
        base >=4.6 && <4.8
      , aeson
      , bytestring
      , conduit
      , comonad
      , containers
      , data-default
      , exceptions
      , free
      , http-conduit
      , http-types
      , mtl
      , resourcet
      , scientific
      , text
      , time
      , transformers
      , unordered-containers

  hs-source-dirs:
        src
  default-language:
        Haskell2010

test-suite shopify-tests
  hs-source-dirs:
        test
  main-is:
        Main.hs
  Type:
        exitcode-stdio-1.0
  default-language:
        Haskell2010
  build-depends:
        base
      , shopify -any
      , QuickCheck
      , HUnit
      , test-framework
      , test-framework-hunit
      , test-framework-quickcheck2
      , raw-strings-qq
